--- a/popup.html
+++ b/popup.html
@@ -28,6 +28,7 @@
       - [1]: https://developer.chrome.com/extensions/contentSecurityPolicy
      -->
     <!-- <script src="popup.js"></script> -->
+    <script src="index.js"></script>
   </head>
   <body>
     <div id="status"></div>
